--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "home-site",
   "version": "0.1.0",
   "private": true,
-  "engines": {"npm":"6.7.0",
-              "node":"11.14.0"
+  "engines": {
+    "npm": "6.7.0",
+    "node": "11.14.0"
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
@@ -11,6 +12,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-draggable": "^3.3.0",
     "react-particles-js": "^2.6.0",
     "react-scripts": "3.0.0"
   },
