finally made the simple fix to change chrome tab title of website from react app to JayZonday Visions as well as the logo of a shamrock

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "JayZonday Visions",
-  "name": "JayZonday Visions",
+  "short_name": "JayZonday-Visions",
+  "name": "JayZonday-Visions",
   "icons": [
     {
       "src": "shamrock.ico",
