--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
     "react-particles-js": "^2.6.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0"
   },
   "scripts": {
