react-twitter-embedd added in as well as new bet and new quote of the day and new home button logo

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-draggable": "^3.3.0",
     "react-particles-js": "^2.6.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "react-twitter-embed": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
