--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
     "react-particles-js": "^2.6.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0",
-    "react-twitter-embed": "^3.0.3"
+    "react-twitter-embed": "^3.0.3",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
