--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "npm": "6.7.0"
+    "npm": "6.7.0",
+    "node": "11.14.0"
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
