--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^4.4.1",
+    "babel-jest": "24.7.1",
     "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.16",
